Fixed: IE scrollbar behaviour; IE whitespace bug
* IE scrollbars no longer overlap and hide content
* Posts no longer contain extra horizontal white space:

   CSS transform on IE seems to affect overflow differently. Temporarily
fixed by hiding horizontal overflow.

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,5 +1,6 @@
 html {
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  -ms-overflow-style: scrollbar; }
 
 body {
   color: #202020; }
@@ -323,7 +324,8 @@ body {
 
 .post {
   text-align: justify;
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+  overflow-x: hidden; }
   @media (min-width: 992px) {
     .post {
       margin-left: 30px; } }
